# learning-machine-learning

./: CMakeLists.txt  README.md  main.cpp
src/: 00_simple_1x1_forward_pass.cpp  01_simple_perceptron.cpp  02_flower_perceptron.cpp  03_handrolled_forward_pass.cpp  06_handrolled_single_neuron.cpp
